# aoc2023

./: .gitignore  README.md  build.zig  day24.ipynb  day25-direct.ipynb  pyproject.toml
aoc2017/: README.md  build.zig
aoc2017/day1/: build.zig
aoc2017/day10/: input.txt
aoc2017/day11/: input.txt
aoc2017/day13/: input.txt
aoc2017/day19/: input.txt
aoc2017/day2/: input.txt
aoc2017/day21/: input.txt
aoc2017/day22/: input.txt
aoc2017/day23/: notes.js  notes.txt
aoc2017/day3/: sample.txt
aoc2017/day4/: sample1-valid.txt  sample2-invalid.txt  sample3-valid.txt
aoc2017/src/: 2023day1.zig  buf-iter.zig  day1.zig  day10.zig  day11.zig  day12.zig  day13.zig  day14.zig  day15.zig  day16.zig  day17.zig  day18.zig  day19.zig  day2.zig  day20.zig  day21.zig  day22.zig  day23.zig  day24.zig  day25.zig  day3.zig  day4.zig  (+8 more)
day1/: input.txt
day10/: input.txt
day11/: input.txt
day12/: input.txt
day13/: input.txt  pain-adjust.txt  pain.txt
day14/: grid-test.txt
day15/: input.txt
day18/: input.txt
day20/: lcm.py
day23/: count.py
day24/: NOTES.md  day24-sympy.ipynb
day25/: day25.ipynb
day5/: input.txt
hello-world/: build.zig
scripts/: extract-sample.ts
src/: buf-iter.zig  day1.zig  day10.zig  day11.zig  day12.zig  day13.zig  day14.zig  day15.zig  day16.zig  day17.zig  day18.zig  day19.zig  day2.zig  day20.zig  day21.zig  day22.zig  day23.zig  day24.zig  day25.zig  day3.zig  day4.zig  day5.zig  day6.zig  day7.zig  day8.zig  day9.zig  dijkstra.zig  dir.zig  grid.zig  interval.zig  main-2017.zig  main.zig  util.zig
tutorial/: main.zig
(+28 files in other folders)
