[tool.poetry]
name = "aoc2023"
version = "0.1.0"
description = ""
authors = ["Dan Vanderkam <danvdk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
networkx = "^3.2.1"
sympy = "^1.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
